# skill-ai-worklog

./: .gitignore  README.md  pyproject.toml
docs/: data-collection-and-metrics.zh.md
server/: __init__.py
server/ai_worklog_server/: __init__.py  analysis.py  app.py  metrics.py  storage.py  trellis.py
skills/ai-worklog/: SKILL.md  skill-version.json
skills/ai-worklog/agents/: openai.yaml
skills/ai-worklog/scripts/: async_upload_trigger.py  bootstrap.py  check_update.py  codex_backfill.py  codex_backfill_trigger.py  cursor_backfill.py  dev_server.py  doctor.py  install.py  journal.py  platform_io.py  platforms.py  replay.py  skill_maintenance_trigger.py  skill_release.py  surfaces.py  test_hook_fire.py  test_journal.py  update_skill.py
tests/: test_bootstrap.py  test_cursor_backfill.py  test_install.py  test_platform_surface_doctor.py  test_server.py  test_skill_maintenance.py  test_update_check.py  test_update_skill.py  test_versioning.py
