[project]
name = "ai-worklog-observability"
version = "0.3.0"
description = "Internal AI worklog client skill and collector server for Codex and Cursor."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ai-worklog-server = "server.ai_worklog_server.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
